--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "mongoose": "^5.10.14",
     "node-nlp": "^4.14.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
