--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "mongoose": "^5.10.14",
     "node-nlp": "^4.14.2",
     "react": "^16.13.1",
