ignored .env. Added crypto to cellphone numbers and created a local json file with key, stage, step and number of users

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 TWILIO_ACCOUNT_SID=AC03c760dadbf12c0e11d163a8f110e479
 TWILIO_AUTH_TOKEN=23f180fd72c1e3237bdc1c41eb8b00cc
 TWILIO_PHONE_NUMBER=+14155238886
+SECRET_KEY = vOVH6sdmpNWjRRIqCc7rdxs01lwHzfr3
