--- a/package.json
+++ b/package.json
@@ -3,16 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.7.0",
     "@nlpjs/basic": "^4.14.2",
+    "@nlpjs/lang-es": "^4.17.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "flat": "^5.0.2",
+    "leaflet": "^1.7.1",
     "mongoose": "^5.10.14",
     "node-nlp": "^4.14.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-leaflet": "^2.7.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "twilio": "^3.49.4"
   },
