--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-leaflet": "^2.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-transition-group": "^4.4.1",
     "twilio": "^3.49.4"
   },
   "scripts": {
