--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "flor_react",
   "version": "0.1.0",
+
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.7.0",
@@ -17,6 +18,7 @@
     "node-nlp": "^4.14.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-full-screen": "^0.3.1",
     "react-leaflet": "^2.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
