--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "name": "flor_react",
   "version": "0.1.0",
-
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.7.0",
     "@nlpjs/basic": "^4.14.2",
     "@nlpjs/lang-es": "^4.17.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -20,9 +18,9 @@
     "react-dom": "^16.13.1",
     "react-full-screen": "^0.3.1",
     "react-leaflet": "^2.7.0",
+    "react-query": "^3.3.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "react-transition-group": "^4.4.1",
     "twilio": "^3.49.4"
   },
   "scripts": {
@@ -33,7 +31,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000",
+  "proxy": {"/api":  {
+        "target": "http://localhost:5000"
+    }},
   "eslintConfig": {
     "extends": "react-app"
   },
