--- a/package.json
+++ b/package.json
@@ -31,9 +31,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": {"/api":  {
-        "target": "http://localhost:5000"
-    }},
+  "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": "react-app"
   },
