--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-full-screen": "^0.3.1",
     "react-leaflet": "^2.7.0",
     "react-query": "^3.3.4",
+    "react-quick-pinch-zoom": "^4.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "twilio": "^3.49.4"
