--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-quick-pinch-zoom": "^4.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "twilio": "^3.49.4"
+    "twilio": "^3.49.4",
+    "vcards-js": "^2.10.0"
   },
   "scripts": {
     "server": "node-env-run server --exec nodemon | pino-colada",
@@ -36,8 +37,6 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  
-
   "browserslist": {
     "production": [
       ">0.2%",
